--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.8  # Choose a Python version compatible with Ansible
+        python-version: 3.9  # Choose a Python version compatible with Ansible
     
     - name: Clone ansible
       uses: GuillaumeFalourd/clone-github-repo-action@v2.3
@@ -25,6 +25,11 @@ jobs:
         branch: 'main'
         owner: 'pauldchang'
         repository: 'ec2-ansible'
+
+    - name: Access cloned repo
+      run: |
+         cd ec2-ansible
+         ls -la
     
     - name: Configure AWS credentials
       run: |
@@ -32,15 +37,12 @@ jobs:
         echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> $GITHUB_ENV
         echo "AWS_DEFAULT_REGION=${{ secrets.AWS_DEFAULT_REGION }}" >> $GITHUB_ENV
 
-    - name: Access cloned repo
-      run: |
-         cd ec2-ansible
-         ls -la
-
     - name: Install Ansible
       run: |
+        pip install boto3
+        pip install botocore
         pip install ansible
-    
+           
     - name: Run Ansible Playbook
       run: |
-        ansible-playbook -i inventory ec2.yml
+        ansible-playbook ec2.yaml
