--- a/ec2.yaml
+++ b/ec2.yaml
@@ -1,6 +1,6 @@
 ---
 - hosts: localhost
-  connection: localhost
+  connection: local
   become: false
   tasks:
   - name: Spot Request Creation with more options
@@ -8,8 +8,8 @@
       launch_specification:
         image_id: ami-0900fe555666598a2
         key_name: SSH-MAC
+        instance_type: t2.medium
         security_group_ids: sg-0884719d5ecbb2b29
-        instance_type: t2.micro
         block_device_mappings:
           - device_name: /dev/sdb
             ebs:
