--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,5 +45,5 @@ jobs:
            
     - name: Run Ansible Playbook
       run: |
-        ansible-playbook ec2.yaml
-        
+        chmod +x ./playbook.sh
+        ./playbook.sh
