--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,4 +46,4 @@ jobs:
     - name: Run Ansible Playbook
       run: |
         chmod +x ./playbook.yml
-        ./playbook.ymp
+        ./playbook.yml
